[package]
name = "rust-mq"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async
tokio = { version = "1.44.1", features = ["full"] }
loom = { version = "0.7.2", features = [
  "futures",
  "checkpoint",
], optional = true }

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]

# Testing
assert_matches = "1.5.0"
rstest = "0.25.0"

[features]
default = []
loom = ["dep:loom"]
