[package]
name = "rust-mq"
version = "0.1.0"
edition = "2024"

[dependencies]

# Async
tokio = { version = "1.44.1", features = ["full"] }
loom = { version = "0.7.2", features = [
  "futures",
  "checkpoint",
], optional = true }

# Logging
tracing = "0.1.41"

# Testing
proptest = { version = "1.6.0", optional = true }
proptest-state-machine = { version = "0.3.1", optional = true }

[dev-dependencies]

# Async
tokio-test = "0.4.4"

# Testing
assert_matches = "1.5.0"
rstest = "0.25.0"

# Logging
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"

# Errors
thiserror = "2.0.12"

[features]
default = []
loom = ["dep:loom"]
proptest = ["dep:proptest", "dep:proptest-state-machine"]
